--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -15224,22 +15224,22 @@ msgstr "I blocchi sono stati aggiornati"
 msgid "Dashboard plugins"
 msgstr "Plugin pannello di controllo"
 
-msgid "This plugin has been deleted from the Dashboard plugin directory"
+msgid "This plugin has been deleted from the dashboard plugin directory"
 msgstr "Il plugin è stato eliminato dalla directory"
 
-msgid "Enable Dashboard plugins"
+msgid "Enable dashboard plugins"
 msgstr "Abilita il riquadro dei Plugin"
 
-msgid "Select blocks to display in the Dashboard blocks view"
+msgid "Select blocks to display in the dashboard blocks view"
 msgstr "Seleziona gli elementi da visualizzare nel pannello di controllo"
 
 msgid "Position (column)"
 msgstr "Posizione (colonna)"
 
-msgid "Enable Dashboard block"
+msgid "Enable dashboard block"
 msgstr "Abilita l'elemento del pannello di controllo"
 
-msgid "There is no enabled Dashboard plugin"
+msgid "There is no enabled dashboard plugin"
 msgstr "Il plugin pannello di controllo non è attivato"
 
 msgid "Enabled"
@@ -15365,7 +15365,7 @@ msgstr "Report dai fogli di presenza"
 msgid "You do not have attendances"
 msgstr "Non hai fogli di presenza"
 
-msgid "The Dashboard plugins have been updated successfully"
+msgid "The dashboard plugins have been updated successfully"
 msgstr "Il plugin pannello di controllo è stato aggiornato con successo"
 
 msgid "There is no available information about your courses"
