--- a/translations/messages.pt_BR.po
+++ b/translations/messages.pt_BR.po
@@ -15224,22 +15224,22 @@ msgstr "Os blocos foram atualizados"
 msgid "Dashboard plugins"
 msgstr "Plugins do Painel"
 
-msgid "This plugin has been deleted from the Dashboard plugin directory"
+msgid "This plugin has been deleted from the dashboard plugin directory"
 msgstr "Este plugin foi excluído do diretório de plugin do painel"
 
-msgid "Enable Dashboard plugins"
+msgid "Enable dashboard plugins"
 msgstr "Ativar plugins do painel"
 
-msgid "Select blocks to display in the Dashboard blocks view"
+msgid "Select blocks to display in the dashboard blocks view"
 msgstr "Selecionar blocos para visualização no Painel"
 
 msgid "Position (column)"
 msgstr "Posição (coluna)"
 
-msgid "Enable Dashboard block"
+msgid "Enable dashboard block"
 msgstr "Ativar o bloco no painel"
 
-msgid "There is no enabled Dashboard plugin"
+msgid "There is no enabled dashboard plugin"
 msgstr "Não há qualquer plugin ativado para o painel"
 
 msgid "Enabled"
@@ -15365,7 +15365,7 @@ msgstr "Relatório de folhas de presença"
 msgid "You do not have attendances"
 msgstr "Você não tem atendimentos"
 
-msgid "The Dashboard plugins have been updated successfully"
+msgid "The dashboard plugins have been updated successfully"
 msgstr "Os plugins do painel foram atualizados com sucesso"
 
 msgid "There is no available information about your courses"
